# EternalResourceExtractor

./: .deepsource.toml  .gitattributes  CMakeLists.txt  LICENSE  README.md  extract.cpp  extract.hpp  getdelim.c  getdelim.cpp  linoodle.hpp  linoodle_lib.h  main.c  main.cpp  oodle.hpp  ooz.hpp  utils.c  utils.cpp  utils.h  utils.hpp
.github/: cmake.yml
.github/workflows/: build.yml  cmake.yml
argh/: argh.h
lib/: ooz.lib
mmap/: mmap.cpp  mmap.hpp
